# hardcaml-f4pga

./: .gitignore  .gitmodules  .ocamlformat  LICENSE  Makefile  README.md  arty_35.v  basys3.ml  basys3.v  basys3.xdc  dune  main.ml
.devcontainer/: Dockerfile  devcontainer.json  with_swap.sh
.devcontainer/features/f4fpga/: devcontainer-feature.json  install.sh
.devcontainer/features/hardcaml/: devcontainer-feature.json  install.sh
.devcontainer/harcaml-f4pga/: devcontainer.json
.devcontainer/hardcaml-f4pga/: devcontainer.json
.github/workflows/: build.yml  images.yml
src/: clock.ml  dune  eater8bit.ml  led.ml  util.ml
test/: clock_test.ml  dune  eater8bit_test.ml  led_test.ml  util_test.ml
